5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1723_2506.log
== SUBMITION (2019-05-14 11:53:18) 
-- CODE:
qi = int(input("Digite a quantidade inicial: "))
pc = float(input("Digite o percenrual anual: "))/100
qr = int(input("Digite a quantidade retirada anualmente: "))
soma = qi
cont =0
while(soma>0 and soma<12000):
	soma = soma + (soma*pc)
	cont= cont+1
	
if(soma<0):
	print("EXTINCAO")
	print(cont)
else:
		print("LIMITE")
	print(cont)
   
-- EXECUTION TIME:
0.151273
-- ERROR:
  File "/home/codebench/codes/1723/2506/main.py", line 15
    print(cont)
              ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:53:20) 
-- CODE:
qi = int(input("Digite a quantidade inicial: "))
pc = float(input("Digite o percenrual anual: "))/100
qr = int(input("Digite a quantidade retirada anualmente: "))
soma = qi
cont =0
while(soma>0 and soma<12000):
	soma = soma + (soma*pc)
	cont= cont+1
	
if(soma<0):
	print("EXTINCAO")
	print(cont)
else:
		print("LIMITE")
	print(cont)
   
-- ERROR:
File "XXXX", line 15
    print(cont)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:53:37) 
-- CODE:
qi = int(input("Digite a quantidade inicial: "))
pc = float(input("Digite o percenrual anual: "))/100
qr = int(input("Digite a quantidade retirada anualmente: "))
soma = qi
cont =0
while(soma>0 and soma<12000):
	soma = soma + (soma*pc)
	cont= cont+1
	
if(soma<0):
	print("EXTINCAO")
	print(cont)
else:
	Print("LIMITE")
	print(cont)
   
-- EXECUTION TIME:
0.155302
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2506/main.py", line 14, in <module>
    Print("LIMITE")
NameError: name 'Print' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:53:38) 
-- CODE:
qi = int(input("Digite a quantidade inicial: "))
pc = float(input("Digite o percenrual anual: "))/100
qr = int(input("Digite a quantidade retirada anualmente: "))
soma = qi
cont =0
while(soma>0 and soma<12000):
	soma = soma + (soma*pc)
	cont= cont+1
	
if(soma<0):
	print("EXTINCAO")
	print(cont)
else:
	Print("LIMITE")
	print(cont)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    Print("LIMITE")
NameError: name 'Print' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:53:59) 
-- CODE:
qi = int(input("Digite a quantidade inicial: "))
pc = float(input("Digite o percenrual anual: "))/100
qr = int(input("Digite a quantidade retirada anualmente: "))
soma = qi
cont =0
while(soma>0 and soma<12000):
	soma = soma + (soma*pc)
	cont= cont+1
	
if(soma<0):
	print("EXTINCAO")
	print(cont)
else:
	print("LIMITE")
	print(cont)
   
-- OUTPUT:
LIMITE
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:54:30) 
-- CODE:
qi = int(input("Digite a quantidade inicial: "))
pc = float(input("Digite o percenrual anual: "))/100
qr = int(input("Digite a quantidade retirada anualmente: "))
soma = qi
cont =0
while(soma>0 and soma<12000):
	soma = soma + (soma*pc)
	cont= cont+1
	
if(soma<0):
	print("EXTINCAO")
	print(cont)
else:
	print("LIMITE")
	print(cont)
   
-- EXECUTION TIME:
0.178094
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
40
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
10
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:54:32) 
-- CODE:
qi = int(input("Digite a quantidade inicial: "))
pc = float(input("Digite o percenrual anual: "))/100
qr = int(input("Digite a quantidade retirada anualmente: "))
soma = qi
cont =0
while(soma>0 and soma<12000):
	soma = soma + (soma*pc)
	cont= cont+1
	
if(soma<0):
	print("EXTINCAO")
	print(cont)
else:
	print("LIMITE")
	print(cont)
   
-- OUTPUT:
LIMITE
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:55:37) 
-- CODE:
qi = int(input("Digite a quantidade inicial: "))
pc = float(input("Digite o percenrual anual: "))/100
qr = int(input("Digite a quantidade retirada anualmente: "))
soma = qi
cont =0
while(soma>0 and soma<12000):
	soma = soma + (soma*pc) -qr
	cont= cont+1

if(soma<0):
	print("EXTINCAO")
	print(cont)
else:
	print("LIMITE")
	print(cont)
   
-- EXECUTION TIME:
0.172822
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
